# Ubuntu_backup

catkin_ws/devel/: .catkin  local_setup.sh  setup.sh
catkin_ws/devel/lib/pkgconfig/: topic_cpp.pc  topic_cpp2.pc  topic_py.pc  topic_py2.pc
catkin_ws/devel/lib/topic_cpp/: demo_topic_publisher  demo_topic_subscriber
catkin_ws/devel/lib/topic_cpp2/: topic_subscriber2
catkin_ws/devel/share/roseus/ros/topic_cpp/: manifest.l
catkin_ws/devel/share/roseus/ros/topic_cpp2/: manifest.l
catkin_ws/devel/share/roseus/ros/topic_py/: manifest.l
catkin_ws/devel/share/string_topic_py/cmake/: string_topic_py-msg-paths.cmake
catkin_ws/devel/share/topic_cpp/cmake/: topic_cpp-msg-extras.cmake  topic_cpp-msg-paths.cmake  topic_cppConfig.cmake
catkin_ws/devel/share/topic_cpp2/cmake/: topic_cpp2-msg-paths.cmake  topic_cpp2Config.cmake
catkin_ws/devel/share/topic_py/cmake/: topic_py-msg-extras.cmake  topic_py-msg-paths.cmake  topic_pyConfig.cmake
catkin_ws/devel/share/topic_py2/cmake/: topic_py2Config.cmake
catkin_ws/src/string_topic_py/: CMakeLists.txt  package.xml
catkin_ws/src/string_topic_py/src/: listener_py.py  talker_py.py
catkin_ws/src/topic_cpp/: CMakeLists.txt
catkin_ws/src/topic_cpp/src/: demo_topic_publisher.cpp  demo_topic_subscriber.cpp
catkin_ws/src/topic_cpp2/: CMakeLists.txt  package.xml
catkin_ws/src/topic_cpp2/src/: topic_subscriber2.cpp
catkin_ws/src/topic_py/: CMakeLists.txt
catkin_ws/src/topic_py/src/: topic_publisher.py  topic_subscriber.py
catkin_ws/src/topic_py2/: CMakeLists.txt
catkin_ws/src/topic_py2/src/: topic_publisher2.py
topic_cpp2/: CMakeLists.txt
topic_cpp2/src/: topic_subscriber2.cpp
